--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <img src="../img/coffeebeans.jpeg" alt="">
     <div class="container justify-content-center mt-5 p-5" style="background-color: #fff9e7;">
         <h3>This is Home page</h3>
         <div class="input-group flex-nowrap justify-content-center" style="width: 30%;">
