fixed links for navbar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -68,11 +68,11 @@ nav ul li a {
     </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <nav class="navbar bg-dark" data-bs-theme="dark">
-        <label class="logo"><a href="/">Starbuzz</label></a>
+        <label class="logo"><a href="/home">Starbuzz</label></a>
         <ul class="mylist">
             <li><a href="#" class="activate">Favorite Items</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Sign Up</a></li>
             <!-- <select name="Login" id="login">
                 <option value="Sign in" disabled>Sign In</option>
                 <option value="Register" disabled>Register</option>
