--- a/views/createListing.ejs
+++ b/views/createListing.ejs
@@ -21,7 +21,7 @@
             </div>
             <div class="col-md-6">
                 <label for="price" class="form-label">Price</label>
-                <input type="number" name="price" class="form-control" id="price">
+                <input type="integer" name="price" class="form-control" id="price">
             </div>
             <div class="col-12">
                 <label for="description" class="form-label">Description</label>
