--- a/views/mycart.ejs
+++ b/views/mycart.ejs
@@ -1,139 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>Shopping Cart</title>
-    <%-include('partials/navbar')%>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <title>Shopping Cart</title>
+  <%- include('partials/navbar') %>>
     <style>
-.title {
-display: flex;
-justify-content: center;
-}
+      .title {
+        display: flex;
+        justify-content: center;
+      }
 
-.shoppingcart {
-display: flex;
-justify-content: center;
-}
+      .shoppingcart {
+        display: flex;
+        justify-content: center;
+      }
 
 
-.total {
-display: flex;
-flex-direction: column;
-justify-content: flex-end;
-padding-right: 125px;
-margin-bottom: 10px;
-}
+      .total {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding-right: 125px;
+        margin-bottom: 10px;
+      }
 
-.total-item {
-display: flex;
-flex-direction: row;
-justify-content: flex-end;
-width: 100%;
-margin-bottom: 10px;
-}
-.total-label {
-display: flex;
-flex-direction: row;
-justify-content: flex-end;
-width: 79%;
-text-align: right;
-}
-    
-.total-value {
-display: flex;
-flex-direction: row;
-justify-content: flex-end;
-}
+      .total-item {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        width: 100%;
+        margin-bottom: 10px;
+      }
 
-.checkout {
-display: flex;
-justify-content: flex-end;
-border: 0;
-margin-top: 20px;
-padding: 6px 12px;
-background-color: black;
-color: #fff;
-font-size: 18px;
-border-radius: 3px;
-}
+      .total-label {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        width: 79%;
+        text-align: right;
+      }
 
-.button {
-display: flex;
-justify-content: flex-end;
-padding-right: 123px;
-}
+      .total-value {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+      }
 
-#inc {
-height: 35px;
-width: 40px;
-padding-bottom: 5px;
-}
+      .checkout {
+        display: flex;
+        justify-content: flex-end;
+        border: 0;
+        margin-top: 20px;
+        padding: 6px 12px;
+        background-color: black;
+        color: #fff;
+        font-size: 18px;
+        border-radius: 3px;
+      }
+
+      .button {
+        display: flex;
+        justify-content: flex-end;
+        padding-right: 123px;
+      }
+
+      #inc {
+        height: 35px;
+        width: 40px;
+        padding-bottom: 5px;
+      }
     </style>
 </head>
+
 <body>
-    <div class="title">
+  <div class="title">
     <h1 class="shoppingcart">Shopping Cart</h1>
-    </div>
-    <table class="table">
-        <thead>
+  </div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Product</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">Price</th>
+        <th scope="col"></th>
+        <th scope="col"></th>
+        <th scope="col">Total</th>
+      </tr>
+    </thead>
+    <tbody class="table-group-divider">
+      <% myCart.forEach(function(cartItems){ %>
+        <tr>
+          <th scope="row">1</th>
+          <td>
+            <%= cartItems.productName %>
+          </td>
+          <td><button class="btn btn-success" onclick="increase()">+</button><input id=inc type="number"><button
+              class="btn btn-warning" onclick="decrease()">-</button></td>
+          <td>5.00</td>
+          <td><button class="btn btn-warning">Edit</button></td>
+          <form action="/delete-cart/<%= cartItems.id %>" method="POST">
+            <td><button id="<%= cartItems.id%>" class="btn btn-danger">Remove</button></td>
+          </form>
+          <td>10.00</td>
+        </tr>
+        <% }) %>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Product</th>
-            <th scope="col">Quantity</th>
-            <th scope="col">Price</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-            <th scope="col">Total</th>
-          </tr>
-        </thead>
-        <tbody class="table-group-divider">
-          <tr>
-            <th scope="row">1</th>
-            <td>Coffee</td>
-            <td><button class="btn btn-success" onclick="increase()">+</button><input id=inc type="number"><button class="btn btn-warning" onclick="decrease()">-</button></td>
-            <td>5.00</td>
-            <td><button class="btn btn-warning">Edit</button></td>
-            <td><button class="btn btn-danger">Remove</button></td>
-            <td>10.00</td>
-          </tr>
-          <tr>
-        </tbody>
-      </table>
-      <div class="total">
-        <div class="total-item">
-          <label>Subtotal 10.00</label>
-          <div class="total-value" id="cart-subtotal"></div>
+    </tbody>
+  </table>
+  <div class="total">
+    <div class="total-item">
+      <label>Subtotal 10.00</label>
+      <div class="total-value" id="cart-subtotal"></div>
     </div>
     <div class="total-item">
-        <label>Tax (0%)</label>
-        <div class="total-value" id="cart-tax"></div>
-      </div>
-      <div class="total-item total-item-total">
-        <label>Grand Total</label>
-        <div class="total-value" id="cart-total"></div>
-      </div>
+      <label>Tax (0%)</label>
+      <div class="total-value" id="cart-tax"></div>
     </div>
-        
-        <div class="button"><button class="checkout">Checkout</button></div>
-  
+    <div class="total-item total-item-total">
+      <label>Grand Total</label>
+      <div class="total-value" id="cart-total"></div>
+    </div>
   </div>
-    <!-- <ul class="cart-items">
+
+  <div class="button"><button class="checkout">Checkout</button></div>
+
+  </div>
+  <!-- <ul class="cart-items">
     <li class="coffee-products"> -->
 
-    </li>
-    </ul>
+  </li>
+  </ul>
 
 </body>
 <script>
-     function increase() {
-      document.getElementById('inc').stepUp();
-   }
-   function decrease() {
-      document.getElementById('inc').stepDown();
-   }
+  function increase() {
+    document.getElementById('inc').stepUp();
+  }
+  function decrease() {
+    document.getElementById('inc').stepDown();
+  }
 </script>
+
 </html>
