fixing the cart

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
                             alt="..."></a>
                     <div class="card-body">
                         <h5 class="card-title">
-                            <%= product.productName%>
+                            <%= product.name%>
                                 <h3 class="card-text">
                                     price:
                                     $<%= product.price%>
