--- a/views/mycart.ejs
+++ b/views/mycart.ejs
@@ -8,7 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <title>Shopping Cart</title>
-  <%- include('partials/navbar') %>>
+  <%- include('partials/navbar') %>
+
     <style>
       .title {
         display: flex;
@@ -94,26 +95,36 @@
       </tr>
     </thead>
     <tbody class="table-group-divider">
-      <tr>
-        <th scope="row">1</th>
-        <td>
-        </td>
-        <td><button class="btn btn-success" onclick="increase()">+</button><input id=inc type="number"><button
-            class="btn btn-warning" onclick="decrease()">-</button></td>
-        <td>5.00</td>
-        <td><button class="btn btn-warning">Edit</button></td>
-        <form action="/delete-cart/" method="POST">
-          <td><button id="" class="btn btn-danger">Remove</button></td>
-        </form>
-        <td>10.00</td>
-      </tr>
-      <tr>
+
+      <h3>
+      </h3>
+      <% addedToCart.forEach((cartItem)=>{ %>
+        <tr>
+          <td scope="row"></td>
+          <td>
+            <%= cartItem.product.name %>
+          </td>
+          <td>1</td>
+          <td>
+            $<%= cartItem.product.price %>
+          </td>
+          <form action="/delete-cart/<%=cartItem.id %>" method="POST">
+            <td><button id="<%= cartItem.id  %>" class="btn btn-danger">Remove</button></td>
+          </form>
+          <td>
+            $<%= cartItem.product.price %>
+          </td>
+
+        </tr>
+        <% }) %>
+          <tr>
     </tbody>
   </table>
   <div class="total">
     <div class="total-item">
-      <label>Subtotal 10.00</label>
-      <div class="total-value" id="cart-subtotal"></div>
+      <% %>
+        <label>Subtotal</label>
+        <div class="total-value" id="cart-subtotal"></div>
     </div>
     <div class="total-item">
       <label>Tax (0%)</label>
